--- a/index.html
+++ b/index.html
@@ -71,34 +71,32 @@
           Congratulations to all of those that have been selected!
         </p>
       </div>
-      <div class="jury row">
-         <div class="juror offset-by-one four columns">
-            <img class="circle-crop" src="http://placekitten.com/250/250" />
-            <p class="juror-name">Debbie Millman <br />
-            <span class="juror-title">Graphic Design Juror</span></p>
-          </div>
-         <div class="juror offset-by-one four columns">
-           <img class="circle-crop" src="http://placekitten.com/250/250" />
-           <p class="juror-name">Debbie Millman <br />
-           <span class="juror-title">Fine Art Juror</span></p>
-         </div>
-      </div>
+    <div class="jury row">
+       <div class="juror firstjuror">
+          <img class="circle-crop" src="images/Debbie-Millman.jpg" />
+          <p class="juror-name">Debbie Millman<br />
+          <span class="juror-title">Graphic Design Juror</span></p>
+        </div>
+       <div class="juror">
+         <img class="circle-crop" src="images/Jessica-Burke.jpg" />
+         <p class="juror-name">Jessica Burke<br />
+         <span class="juror-title">Fine Art Juror</span></p>
+       </div>
     </div>
+  </div>
   </section>
 
   <!-- Navigation -->
 
   <nav class="navigation">
-    <div class="nav-container container">
-      <div class="row">
-        <ul class="nav-ul offset-by-one column">
+    <div class="nav-container">
+
+        <ul class="nav-ul">
           <li class="nav-item"><a class="nav-link" href="#best-in-show">Best in Show</a></li>
           <li class="nav-item"><a class="nav-link" href="#judges-choice">Judges' Choice</a></li>
-          <li class="nav-item"><a class="nav-link" href="#gold-winners">Gold Winners</a></li>
-          <li class="nav-item"><a class="nav-link" href="#silver-winners">Silver Winners</a></li>
-          <li class="nav-item"><a class="nav-link" href="#about-the-program">About the Program</a></li>
+          <li class="nav-item"><a class="nav-link" href="#all">Full Exhibition</a></li>
         </ul>
-      </div>
+
     </div>
   </nav>
 
@@ -106,7 +104,7 @@
 
   <section class="award-category top-award big-award" id="best-in-show">
     <article class="container">
-      <h2 class="offset-by-one column">Best in Show</h2>
+      <h2 class="offset-by-one column">Best in Show—Fine Art</h2>
       <div class="row">
         <a href="images/project-images/blinkers-packaging-1.jpg" data-fancybox="group1">
           <img class="offset-by-one seven columns u-full-width" src="images/project-images/blinkers-packaging-1.jpg" alt="Blinkers packaging" />
@@ -131,9 +129,9 @@
 
   <!-- Judges' Choice -->
 
-  <section class="award-category big-award" id="judges-choice">
+  <section class="award-category big-award">
     <article class="container">
-      <h2 class="offset-by-one column">Judges' Choice</h2>
+      <h2 class="offset-by-one column">Best in Show—Graphic Design</h2>
       <div class="row">
         <a href="images/project-images/ivyleaves-1.jpg" data-fancybox="group2">
           <img class="offset-by-one seven columns u-full-width" src="images/project-images/ivyleaves-1.jpg" alt="Ivy Leaves Journal" />
@@ -157,9 +155,9 @@
 
   <!-- Gold Winners -->
 
-  <section class="award-category gold" id="gold-winners">
+  <section class="award-category gold" id="judges-choice">
     <div class="container">
-      <h2 class="offset-by-one column">Gold Award Winners</h2>
+      <h2 class="offset-by-one column">Judge's Choice Awards</h2>
       <div class="row row-spacing">
         <div class="offset-by-one five columns">
           <a href="images/project-images/orza-packaging.jpg" data-fancybox>
@@ -419,11 +417,11 @@
     </div>
   </section>
 
-  <!-- Silver Winners -->
+  <!-- Complete Exhibition -->
 
-  <section class="award-category silver" id="silver-winners">
+  <section class="award-category silver" id="all">
     <div class="container">
-      <h2 class="offset-by-one column">Silver Award Winners</h2>
+      <h2 class="offset-by-one column">2020 Juried Exhibition</h2>
       <div class="row row-spacing">
         <div class="offset-by-one three columns">
           <a href="images/project-images/route7-1.jpg" data-fancybox="group-route7pkg">
