Initial type adjustments
working on general hierarchy. Determining when to pair Open Sans with Patrima.

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
   <section class="award-category top-award big-award" id="best-in-show">
     <article class="container">
-      <h2 class="offset-by-one column">Best in Show—Fine Art</h2>
+      <h2 class="offset-by-one column">Best in Show<br/><span class="award-category">Fine Art</span></h2>
       <div class="row">
         <a href="images/project-images/blinkers-packaging-1.jpg" data-fancybox="group1">
           <img class="offset-by-one seven columns u-full-width" src="images/project-images/blinkers-packaging-1.jpg" alt="Blinkers packaging" />
@@ -131,7 +131,7 @@
 
   <section class="award-category big-award">
     <article class="container">
-      <h2 class="offset-by-one column">Best in Show—Graphic Design</h2>
+      <h2 class="offset-by-one column">Best in Show<br/><span class="award-category">Graphic Design</span></h2>
       <div class="row">
         <a href="images/project-images/ivyleaves-1.jpg" data-fancybox="group2">
           <img class="offset-by-one seven columns u-full-width" src="images/project-images/ivyleaves-1.jpg" alt="Ivy Leaves Journal" />
