--- a/index.html
+++ b/index.html
@@ -47,13 +47,14 @@
   <section class="intro u-full-width">
     <div class="container">
       <div class="row">
-        <img class="scsalogo offset-by-one two columns u-full-width" src="images/scsa-logo-gray.png" alt="South Carolina School of the Arts logo"/>
+        <img class="scsalogo offset-by-one three columns u-full-width" src="images/scsa-logo-gray.png" alt="South Carolina School of the Arts logo"/>
+        <img class="scsalogo-desktop offset-by-one three columns u-full-width" src="images/scsa-logo-gray-margin.png" alt="South Carolina School of the Arts logo"/>
       </div>
       <div class="row">
         <img class="mainheadline offset-by-one ten columns" src="images/main-title.png" alt="The new school of thought"/>
       </div>
       <div class="row">
-        <h1 class="mainsubhead offset-by-six five columns">Dept. of Art+Design</h1>
+        <h1 class="mainsubhead offset-by-five six columns">Dept. of Art+Design</h1>
       </div>
     </div>
   </section>
