--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <section class="intro u-full-width">
+  <section class="intro top-line bottom-line u-full-width">
     <div class="container">
       <div class="row">
         <img class="scsalogo offset-by-one three columns u-full-width" src="images/scsa-logo-gray.png" alt="South Carolina School of the Arts logo"/>
