--- a/index.html
+++ b/index.html
@@ -265,13 +265,9 @@
     <div class="container">
       <div class="row">
         <p class="offset-by-one six columns">
-          <strong>Christ-centered, concept-driven, future-focused.</strong>
+          The South Carolina School of the Arts Department of Art+Design is a premiere southeastern art and design program housed inside of a broad liberal arts education. As a part of Anderson University, we offer a BFA in Graphic Design and a BA in Art with concentrations in Painting & Drawing, Sculpture & Ceramics, Photography, and Art Education. Small class sizes and low faculty to student ratio are what makes us one of the Best Regional Universities according to U.S. News and World Report.
           <br><br>
-          AU students and alumni have been featured in prestigious publications like <a href="http://www.printmag.com/" target="_blank">Print Magazine</a> and <a href="https://www.commarts.com/" target="_blank">Communication Arts</a>, exhibited in the <a href="http://www.museumofdesign.org/" target="_blank">Museum of Design Atlanta (MODA)</a>, and won accolades from the <a href="https://www.aiga.org/" target="_blank">American Institute of Graphic Arts (AIGA)</a> InState Awards and over 250 <a href="http://www.aaf.org/" target="_blank">American Advertising Federation Awards</a>.
-          <br><br>
-          Alumni work for a variety of national companies, including <a href="https://www.yelp.com/" target="_blank">Yelp!</a> in San Francisco, <a href="https://www.draftkings.com/" target="_blank">Draft Kings</a> in Boston, and <a href="http://www.sothebys.com/en.html" target="_blank">Sotheby’s</a> in New York City. AU grads are not just designers, but Art Directors at top creative agencies. Our students have interned under industry renowned creatives, such as <a href="http://www.debbiemillman.com/" target="_blank">Debbie Millman</a> and <a href="http://www.jamesvictore.com/" target="_blank">James Victore</a>. We host innovative thinkers like <a href="http://elleluna.com/" target="_blank">Elle Luna</a> and <a href="http://jimsherraden.com/" target="_blank">James Sherraden</a> of <a href="https://hatchshowprint.com/" target="_blank">Hatch Show Print</a>.
-          <br><br>
-          <strong>Graphic Design at Anderson University. Creativity, with teeth.</strong>
+          This is the first in what is planned to be an annual Art+Design Juried Exhibition and Competition. Our students do the real work of art and it shows. The program is rigorous. The environment is intense. Expectations are high. The reward for all that effort? Solution-focused, award-winning, career-launching work.
         </p>
         <div class="offset-by-one four columns">
           <h4>Get in touch:</h4>
@@ -283,8 +279,8 @@
             <a href="tel:800-542-3594">800.542.3594</a>
             <a href="mailto:scschoolofthearts@andersonuniversity.edu?subject=I want to know more about the Graphic Design program.">scschoolofthearts@andersonuniversity.edu</a>
           </p>
-          <a href="https://andersonuniversity.edu/school-of-the-arts/art-design" target="_blank"><button class="button-primary">Learn More</button></a>
-          <p class="legal-info">Copyright &copy;2018 Anderson University | <a href="https://andersonuniversity.edu/terms-use" target="blank">Terms of Use</a></p>
+          <a href="https://art.schoolofthearts.com" target="_blank"><button class="button-primary">Learn More About the Program</button></a>
+          <p class="legal-info">Copyright &copy;2020 Anderson University | <a href="https://andersonuniversity.edu/terms-use" target="blank">Terms of Use</a></p>
         </div>
       </div>
     </div>
