--- a/index.html
+++ b/index.html
@@ -65,24 +65,49 @@
     <div class="container">
       <div class="row">
         <p class="body-large offset-by-one ten columns">
-          The South Carolina School of the Arts Department of Art + Design is proud to announce the selections of the first annual Student Juried Exhibition and Competition. This exhibition highlights a selection of outstanding student work submitted into the categories of Foundations, Graphic Design, Photography, Painting Drawing, Digital/Video, 3D/Ceramics, Printmaking, and Mixed-Media.
+          The South Carolina School of the Arts Department of Art + Design is proud to announce the first Student Juried Exhibition and Competition. This exhibition highlights a selection of outstanding student work submitted into the categories of Foundations, Graphic Design, Photography, Painting Drawing, Digital/Video, 3D/Ceramics, Printmaking, and Mixed-Media.
           <br>
           <br>
-          Two jurors judged over 120 submissions and selected 47 to be a part of the exhibit. Selected fine art and graphic design have been awarded Best in Show and Judge's choice awards respectively.
-          Congratulations to all of those that have been selected!
+          Two jurors analyzed 150 submissions and selected 47 entries to be shown in the final exhibit. Out of the chosen entries a select few have been awarded Best in Show and Judge's Choice respectively.
         </p>
       </div>
     <div class="jury row">
+
        <div class="juror firstjuror">
+         <a data-fancybox data-src="#millman-bio" href="javascript:;">
           <img class="circle-crop" src="images/Debbie-Millman.jpg" />
           <p class="juror-name">Debbie Millman<br />
           <span class="juror-title">Graphic Design Juror</span></p>
-        </div>
-       <div class="juror">
-         <img class="circle-crop" src="images/Jessica-Burke.jpg" />
-         <p class="juror-name">Jessica Burke<br />
-         <span class="juror-title">Fine Art Juror</span></p>
+        </a>
        </div>
+       <div class="juror-bio" style="display: none;" id="millman-bio">
+  	      <h2>Debbie Millman</h2>
+          <img src="images/Debbie-Millman.jpg"/><br><br>
+          <p>Named “one of the most creative people in business” by Fast Company, and “one of the most influential designers working today” by Graphic Design USA, Debbie Millman is also an author, educator, curator and host of the podcast Design Matters.</p>
+          <p>As the founder and host of Design Matters, one of the world’s first and longest running podcasts, Millman has interviewed nearly 500 artists, designers and cultural commentators over the past 14 years. Design Matters won a 2011 Cooper Hewitt National Design Award, in 2015 Apple designated it one of the best overall podcasts on iTunes, and in 2018 the show was honored by the Webby Awards. In addition, Design Matters has been listed on over 100 “Best Podcasts” lists, including one of the best podcasts in the world by Business Insider. The show is about how some of the world’s most creative people design the arc of their lives, and Debbie has interviewed guests including Tim Ferriss, Malcolm Gladwell, Marina Abramovic, Steven Pinker, Shepard Fairey, Laurie Anderson, Barbara Kruger, Amanda Palmer, Alain de Botton, Brene Brown, Hamilton Director Thomas Kail, and many, many more.</p>
+          <p>Debbie is the author of six books, including two collections of interviews that have extended the ethos and editorial vision of Design Matters to the printed page: How to Think Like a Great Graphic Designer and Brand Thinking and Other Noble Pursuits. Both books have been published in over 10 languages. She was a writer for the world’s first design blog, Speak Up, the Editorial and Creative Director of Print Magazine and a columnist for N Magazine. She is currently working on an illustrated book for HarperCollins titled Why Design Matters, which will be published in 2020, along with and a documentary about the making of the book, produced by Adobe.</p>
+          <p>Debbie’s illustrations have appeared in publications such as The New York Times, New York Magazine, Print Magazine, Design Observer and Fast Company. She is the author of two books of illustrated essays: Look Both Ways and Self-Portrait As Your Traitor; the later of which has been awarded a Gold Mobius, a Print Typography Award, and a medal from the Art Directors Club. Her artwork is included in the Boston Biennale, Chicago Design Museum, Anderson University, School of Visual Arts, Long Island University, The Wolfsonion Museum and the Czong Institute for Contemporary Art. She has been critic-in-residence at Cranbrook University, Old Dominion University and Notre Dame University, and has conducted visual storytelling workshops all over the world.</p>
+          <p>In 2009 Debbie co-founded the world’s first graduate program in branding at the School of Visual Arts in New York City. Now in its ninth year, the program has achieved international acclaim. The inaugural class wrote and designed the Rockport book Brand Bible: The Complete Guide to Building, Designing and Sustaining Brands, in 2013 the students created branding for the Museum of Modern Art’s retail program, Destination: New York, the class of 2015 worked to reposition a Kappa Middle School in Harlem, the class of 2016 rebranded Mariska Hargitay’s Joyful Heart Foundation, the class of 2017 worked with Kholsa Ventures, Performance Space New York and Chobani Incubators, and the class of 2018 worked with Brian Koppelman to design a logo for the television show Billions.</p>
+          <p>For 20 years, Debbie was the President of Sterling Brands, one of the world’s leading branding consultancies. She arrived there in 1995 when the company was two years old and had 15 employees in one office. Under her leadership, Sterling grew to 150 employees in five offices and she was instrumental in the firm’s acquisition by Omnicom in 2008. Omnicom is one of the world’s largest holding companies. While there she worked on the logo and brand identity for Burger King, Hershey’s, Haagen Dazs, Tropicana, Star Wars, Gillette, and the No More movement.</p>
+          <p>Debbie is also President Emeritus of AIGA, one of five women to hold the position in the organization’s 100-year history.  She is a frequent speaker on design and branding and has moderated Design Yatra in India, presented keynote lectures at Rotman School of Management, Princeton University, Michigan Modern, the Hong Kong Design Association, the Melbourne Writers Festival, Design Thinkers in Toronto, the Festival of Art and Design in Barcelona, Webstock in New Zealand, QVED in Munich, ING in Dubai, ND2C in Pakistan, PS One in China, Web Summit in Lisbon and many more. She has been a juror for competitions including Cannes Lions, The Clio’s, the One Club and many, many more. This year she will be the Jury President for the branding competition for the D&AD Awards in London.</p>
+          <p>Debbie is currently working with Law & Order SVUactor and activist Mariska Hargitay’s Joyful Heart Foundation to eradicate sexual assault, domestic violence, child abuse and the rape-kit backlog.</p><br><br>
+          <a href="https://www.debbiemillman.com/" target="_blank">debbiemillman.com</a><br>
+          <a href="https://www.designmattersmedia.com/designmatters" target="_blank">Design Matters Podcast</a>
+       </div>
+       <div class="juror">
+         <a data-fancybox data-src="#burke-bio" href="javascript:;">
+           <img class="circle-crop" src="images/Jessica-Burke.jpg" />
+           <p class="juror-name">Jessica Burke<br />
+           <span class="juror-title">Fine Art Juror</span></p>
+         </a>
+       </div>
+       <div class="juror-bio" style="display: none;" id="burke-bio">
+  	      <h2>Jessica Burke</h2>
+          <img src="images/Jessica-Burke.jpg"/><br><br>
+          <p>Jessica Burke, JB, is a figurative artist and educator that has been teaching at the university level for 14+ years. She is an Associate Professor of Art and Coordinator of the Foundations Program at the University of North Carolina in Charlotte. She has always been fascinated with mass media and interested in exploring various interpretations on the impact of popular culture on identity and gender. Her creative work has been included in competitive group and solo exhibitions nationally and internationally including the Koehnline Museum of Art in Illinois; the Élysees Modern and Contemporary Art Fair in Paris, France; the Toshima Gallery in Tokyo, Japan; the LuXun Academy of Fine Arts, in Shenyang, China and the Kepco Plaza Gallery Museum, Seoul, South Korea. Her work is part of private, state and corporate collections that include the City of North Charleston; the City of Savannah, Georgia; Seminole State College, Florida and the National Living Treasure Museum in Yugawara, Japan.<br><br>
+          </p>
+          <a href="https://www.jessicaburkeartist.com/" target="_blank">jessicaburkeartist.com</a>
+        </div>
     </div>
   </div>
   </section>
