--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
    <!-- Scripts
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js" type="text/javascript"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js" type="text/javascript"></script>
   <script src="scripts/jquery.fancybox.min.js" type="text/javascript"></script>
   <script src="scripts/jquery.waypoints.min.js" type="text/javascript"></script>
   <script src="scripts/sticky.min.js" type="text/javascript"></script>
