reworded entry paragraph

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           The South Carolina School of the Arts Department of Art + Design is proud to announce the first Student Juried Exhibition and Competition. This exhibition highlights a selection of outstanding student work submitted into the categories of Foundations, Graphic Design, Photography, Painting Drawing, Digital/Video, 3D/Ceramics, Printmaking, and Mixed-Media.
           <br>
           <br>
-          Two jurors analyzed 150 submissions and selected 47 entries to be shown in the final exhibit. Out of the chosen entries a select few have been awarded Best in Show and Judge's Choice respectively.
+          150 pieces were submitted and 47 entries were selected to be shown in the final exhibit. Out of the chosen entries a select few have been awarded Best in Show and Judge's Choice.
         </p>
       </div>
     <div class="jury row">
