added "student" to footer paragraph

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
         <p class="offset-by-one six columns">
           The South Carolina School of the Arts Department of Art+Design is a premiere southeastern art and design program housed inside of a broad liberal arts education. As a part of Anderson University, we offer a BFA in Graphic Design and a BA in Art with concentrations in Painting & Drawing, Sculpture & Ceramics, Photography, and Art Education. Small class sizes and low faculty to student ratio are what makes us one of the Best Regional Universities according to U.S. News and World Report.
           <br><br>
-          This is the first in what is planned to be an annual Art+Design Juried Exhibition and Competition. Our students do the real work of art and it shows. The program is rigorous. The environment is intense. Expectations are high. The reward for all that effort? Solution-focused, award-winning, career-launching work.
+          This is the first in what is planned to be an annual Art+Design Student Juried Exhibition and Competition. Our students do the real work of art and it shows. The program is rigorous. The environment is intense. Expectations are high. The reward for all that effort? Solution-focused, award-winning, career-launching work.
         </p>
         <div class="offset-by-one four columns">
           <h4>Get in touch:</h4>
