updated site title

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Anderson University Graphic Design — 2018 American Advertising Award Winners</title>
+  <title>2020 Student Juried Exhibition and Competition | South Carolina School of the Arts Dept. of Art+Design</title>
   <meta name="description" content="Anderson University Graphic Design students won an unprecedented 44 awards at the 2018 AAF Greenville American Advertising Awards, including Best of Show and Judges’ Choice.">
   <meta name="author" content="Anderson University Department of Art + Design">
 
