cleaned up exterraneous files

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>2020 Student Juried Exhibition and Competition | South Carolina School of the Arts Dept. of Art+Design</title>
-  <meta name="description" content="Anderson University Graphic Design students won an unprecedented 44 awards at the 2018 AAF Greenville American Advertising Awards, including Best of Show and Judges’ Choice.">
-  <meta name="author" content="Anderson University Department of Art + Design">
+  <meta name="description" content="The winners of the 2020 South Carolina School of the Arts Department of Art + Design Student Juried Exhibition and Competition.">
+  <meta name="author" content="South Carolina School of the Arts Department of Art + Design">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
