deleted winner area

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
   <!-- Navigation -->
 
-  <nav class="navigation">
+  <!-- <nav class="navigation">
     <div class="nav-container">
 
         <ul class="nav-ul">
@@ -124,99 +124,8 @@
         </ul>
 
     </div>
-  </nav>
+  </nav> -->
 
-  <!-- Best in Show -->
-
-  <section class="award-category top-award big-award" id="best-in-show">
-    <article class="container">
-      <h2 class="offset-by-one column">Best in Show<br/><span class="award-category">Fine Art</span></h2>
-      <div class="row">
-        <a href="images/project-images/FPO_side-eye.jpg" data-fancybox="group best in show 1">
-          <img class="offset-by-one seven columns u-full-width" src="images/project-images/FPO_side-eye.jpg" alt="Side eye" />
-        </a>
-        <a href="http://place-puppy.com/1000x500" data-fancybox="group best in show 1">
-          <img class="gallery-image" src="http://place-puppy.com/1000x500" alt="image 2" />
-        </a>
-        <a href="http://place-puppy.com/800x500" data-fancybox="group best in show 1">
-          <img class="gallery-image" src="http://place-puppy.com/800x500" alt="image 3" />
-        </a>
-        <div class="project-text four columns">
-          <h3 class="project-title">Side Eye</h3>
-          <hr>
-          <p class="student-info"><span class="student-info-title">Student:</span> Nathan Spainhour</p>
-          <p class="student-info"><span class="student-info-title">Category:</span> Small dog photography</p>
-          <p class="student-info"><span class="student-info-title">Level:</span> Junior</p>
-        </div>
-      </div>
-    </article>
-  </section>
-
-  <!-- Best in Show -->
-
-  <section class="award-category top-award big-award" id="best-in-show">
-    <article class="container">
-      <h2 class="offset-by-one column">Best in Show<br/><span class="award-category">Graphic Design</span></h2>
-      <div class="row">
-        <a href="images/project-images/FPO_this-is-how-we-always-sleep.jpg" data-fancybox="group best in show 2">
-          <img class="offset-by-one seven columns u-full-width" src="images/project-images/FPO_this-is-how-we-always-sleep.jpg" alt="" />
-        </a>
-        <a href="http://place-puppy.com/1100x400" data-fancybox="group best in show 2">
-          <img class="gallery-image" src="http://place-puppy.com/1100x400" alt="image 2" />
-        </a>
-        <a href="http://place-puppy.com/1000x500" data-fancybox="group best in show 2">
-          <img class="gallery-image" src="http://place-puppy.com/1000x500" alt="image 3" />
-        </a>
-        <div class="project-text four columns">
-          <h3 class="project-title">This is how we always sleep</h3>
-          <hr>
-          <p class="student-info"><span class="student-info-title">Student:</span> Nathan Spainhour</p>
-          <p class="student-info"><span class="student-info-title">Category:</span> Small dog photography</p>
-          <p class="student-info"><span class="student-info-title">Level:</span> Freshman</p>
-        </div>
-      </div>
-    </article>
-  </section>
-
-  <!-- Judges' Choice -->
-
-  <section class="award-category gold" id="judges-choice">
-    <div class="container">
-      <h2 class="offset-by-one column">Judge's Choice Awards</h2>
-      <div class="row row-spacing">
-        <div class="offset-by-one five columns">
-          <a href="images/project-images/FPO_screaming-space-squirrel.jpg" data-fancybox="group judges choice 1">
-            <img class="offset-by-one u-full-width" src="images/project-images/FPO_screaming-space-squirrel.jpg" alt="" />
-          </a>
-          <a href="http://place-puppy.com/1000x500" data-fancybox="group judges choice 1">
-            <img class="gallery-image" src="http://place-puppy.com/1000x500" alt="image 2" />
-          </a>
-          <a href="http://place-puppy.com/800x500" data-fancybox="group judges choice 1">
-            <img class="gallery-image" src="http://place-puppy.com/800x500" alt="image 3" />
-          </a>
-          <div class="project-text">
-            <h3 class="project-title">Screaming Space Squirrel</h3>
-            <hr>
-            <p class="student-info"><span class="student-info-title">Student:</span> Nathan Spainhour</p>
-            <p class="student-info"><span class="student-info-title">Category:</span> Small dog photography</p>
-            <p class="student-info"><span class="student-info-title">Level:</span> Junior</p>
-          </div>
-        </div>
-        <div class="offset-by-one five columns">
-           <a href="images/project-images/FPO_chillaxin.jpg" data-fancybox>
-            <img class="offset-by-one u-full-width" src="images/project-images/FPO_chillaxin.jpg" alt="" />
-          </a>
-          <div class="project-text">
-            <h3 class="project-title">Small dog on a small pillow</h3>
-            <hr>
-            <p class="student-info"><span class="student-info-title">Student:</span> Nathan Spainhour</p>
-            <p class="student-info"><span class="student-info-title">Hometown:</span> Small dog photography</p>
-            <p class="student-info"><span class="student-info-title">Level:</span> Senior</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
 
   <!-- Complete Exhibition -->
 
