removed last image
it was a duplicate

--- a/index.html
+++ b/index.html
@@ -888,7 +888,7 @@
             <p class="student-info"><span class="student-info-title">Level:</span> Senior</p>
           </div>
         </div>
-        <div class="offset-by-one five columns">
+        <!-- <div class="offset-by-one five columns">
           <a href="images/project-images/TaylorSmith_Main.jpg" data-fancybox="Taylor-Smith">
             <img class="offset-by-one u-full-width" src="images/project-images/TaylorSmith_Main.jpg" alt="Sand on Fire" />
           </a>
@@ -902,7 +902,7 @@
             <p class="student-info"><span class="student-info-title">Category:</span> Photograpy</p>
             <p class="student-info"><span class="student-info-title">Level:</span> Junior</p>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
