--- a/index.html
+++ b/index.html
@@ -297,9 +297,9 @@
           <div class="project-text">
             <h3 class="project-title">Drinking Alone</h3>
             <hr>
-            <p class="student-info"><span class="student-info-title">Student:</span> Leah Smith</p>
-            <p class="student-info"><span class="student-info-title">Category:</span> Printmaking</p>
-            <p class="student-info"><span class="student-info-title">Level:</span> Senior</p>
+            <p class="student-info"><span class="student-info-title">Student:</span> David Stancil</p>
+            <p class="student-info"><span class="student-info-title">Category:</span> Photography</p>
+            <p class="student-info"><span class="student-info-title">Level:</span> Junior</p>
           </div>
         </div>
       </div>
