added missing works
Leah's poster and John Robert's photo series have been added.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           The South Carolina School of the Arts Department of Art + Design is proud to announce the first Student Juried Exhibition and Competition. This exhibition highlights a selection of outstanding student work submitted into the categories of Foundations, Graphic Design, Photography, Painting &amp; Drawing, Digital/Video, 3D/Ceramics, Printmaking, and Mixed-Media.
           <br>
           <br>
-          150 pieces were submitted and 47 entries were selected to be shown in the final exhibit. Out of the chosen entries a select few have been awarded Best in Show and Judge's Choice.
+          150 pieces were submitted and 48 entries were selected to be shown in the final exhibit. Out of the chosen entries a select few have been awarded Best in Show and Judge's Choice.
         </p>
       </div>
     <div class="jury row">
@@ -145,7 +145,7 @@
           <hr>
           <p class="student-info"><span class="student-info-title">Student:</span> Sarah Delano</p>
           <p class="student-info"><span class="student-info-title">Category:</span> Painting</p>
-          <p class="student-info"><span class="student-info-title">Level:</span> Junior</p>
+          <p class="student-info"><span class="student-info-title">Level:</span> Senior</p>
         </div>
       </div>
     </article>
@@ -330,7 +330,7 @@
             <hr>
             <p class="student-info"><span class="student-info-title">Student:</span> Alexis Ryan</p>
             <p class="student-info"><span class="student-info-title">Category:</span> Drawing</p>
-            <p class="student-info"><span class="student-info-title">Level:</span> Junior</p>
+            <p class="student-info"><span class="student-info-title">Level:</span> Sophomore</p>
           </div>
         </div>
       </div>
@@ -515,7 +515,7 @@
           <div class="project-text">
             <h3 class="project-title">Pepper Still Life</h3>
             <hr>
-            <p class="student-info"><span class="student-info-title">Student:</span> Linsay / Stephany Rivera</p>
+            <p class="student-info"><span class="student-info-title">Student:</span> Linsay Rivera</p>
             <p class="student-info"><span class="student-info-title">Category:</span> Foundations</p>
             <p class="student-info"><span class="student-info-title">Level:</span> Freshman</p>
           </div>
@@ -752,7 +752,7 @@
             <hr>
             <p class="student-info"><span class="student-info-title">Student:</span> Sarah Springer</p>
             <p class="student-info"><span class="student-info-title">Category:</span> Painting</p>
-            <p class="student-info"><span class="student-info-title">Level:</span> Junior</p>
+            <p class="student-info"><span class="student-info-title">Level:</span> Senior</p>
           </div>
         </div>
       </div>
@@ -996,7 +996,7 @@
             <hr>
             <p class="student-info"><span class="student-info-title">Student:</span> Alexis Ryan</p>
             <p class="student-info"><span class="student-info-title">Category:</span> Drawing</p>
-            <p class="student-info"><span class="student-info-title">Level:</span> Junior</p>
+            <p class="student-info"><span class="student-info-title">Level:</span> Sophomore</p>
           </div>
         </div>
         <div class="offset-by-one five columns">
@@ -1087,7 +1087,7 @@
             <hr>
             <p class="student-info"><span class="student-info-title">Student:</span> Charlie Classe</p>
             <p class="student-info"><span class="student-info-title">Category:</span> Drawing</p>
-            <p class="student-info"><span class="student-info-title">Level:</span> Junior</p>
+            <p class="student-info"><span class="student-info-title">Level:</span> Sophomore</p>
           </div>
         </div>
         <div class="offset-by-one five columns">
@@ -1115,6 +1115,44 @@
             <p class="student-info"><span class="student-info-title">Student:</span> Grace Gilbert</p>
             <p class="student-info"><span class="student-info-title">Category:</span> Painting</p>
             <p class="student-info"><span class="student-info-title">Level:</span> Senior</p>
+          </div>
+        </div>
+      </div>
+      <div class="row row-spacing">
+        <div class="offset-by-one five columns">
+          <a href="images/project-images/LeahSmith_Main.jpg" data-fancybox="Leah-Smith">
+            <img class="offset-by-one u-full-width" src="images/project-images/LeahSmith_Main.jpg" alt="Dreamland Tour Poster" />
+          </a>
+          <a href="images/project-images/LeahSmith_2.jpg" data-fancybox="Leah-Smith">
+            <img class="gallery-image" src="images/project-images/LeahSmith_2.jpg" alt="Dreamland Tour Poster" />
+          </a>
+          <div class="project-text">
+            <h3 class="project-title">Dreamland Tour Poster</h3>
+            <hr>
+            <p class="student-info"><span class="student-info-title">Student:</span> Leah Smith</p>
+            <p class="student-info"><span class="student-info-title">Category:</span> Printmaking</p>
+            <p class="student-info"><span class="student-info-title">Level:</span> Senior</p>
+          </div>
+        </div>
+        <div class="offset-by-one five columns">
+          <a href="images/project-images/JohnRegister_Photo_Main.jpg" data-fancybox="JohnRegister_Photo">
+            <img class="offset-by-one u-full-width" src="images/project-images/JohnRegister_Photo_Main.jpg" alt="Vacancy Photo Series" />
+          </a>
+          <a href="images/project-images/JohnRegister_Photo_1_Main.jpg" data-fancybox="JohnRegister_Photo">
+            <img class="gallery-image" src="images/project-images/JohnRegister_Photo_1_Main.jpg" alt="Vacancy Photo Series" />
+          </a>
+          <a href="images/project-images/JohnRegister_Photo_2_Main.jpg" data-fancybox="JohnRegister_Photo">
+            <img class="gallery-image" src="images/project-images/JohnRegister_Photo_2_Main.jpg" alt="Vacancy Photo Series" />
+          </a>
+          <a href="images/project-images/JohnRegister_Photo_3_Main.jpg" data-fancybox="JohnRegister_Photo">
+            <img class="gallery-image" src="images/project-images/JohnRegister_Photo_3_Main.jpg" alt="Vacancy Photo Series" />
+          </a>
+          <div class="project-text">
+            <h3 class="project-title">Vacancy Photo Series</h3>
+            <hr>
+            <p class="student-info"><span class="student-info-title">Student:</span> John Robert Register</p>
+            <p class="student-info"><span class="student-info-title">Category:</span> Photography</p>
+            <p class="student-info"><span class="student-info-title">Level:</span> Junior</p>
           </div>
         </div>
       </div>
@@ -1308,7 +1346,7 @@
             <hr>
             <p class="student-info"><span class="student-info-title">Student:</span> Riley Goodson</p>
             <p class="student-info"><span class="student-info-title">Category:</span> Drawing</p>
-            <p class="student-info"><span class="student-info-title">Level:</span> Sophomore</p>
+            <p class="student-info"><span class="student-info-title">Level:</span> Junior</p>
           </div>
         </div>
       </div>
