Updated years of two students

--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
             <hr>
             <p class="student-info"><span class="student-info-title">Student:</span> Sarah Garrick</p>
             <p class="student-info"><span class="student-info-title">Category:</span> Photography</p>
-            <p class="student-info"><span class="student-info-title">Level:</span> Senior</p>
+            <p class="student-info"><span class="student-info-title">Level:</span> Sophomore</p>
           </div>
         </div>
       </div>
@@ -664,7 +664,7 @@
             <hr>
             <p class="student-info"><span class="student-info-title">Student:</span> Katie Landry</p>
             <p class="student-info"><span class="student-info-title">Category:</span> Drawing</p>
-            <p class="student-info"><span class="student-info-title">Level:</span> Junior</p>
+            <p class="student-info"><span class="student-info-title">Level:</span> Sophomore</p>
           </div>
         </div>
       </div>
@@ -1205,7 +1205,7 @@
             <hr>
             <p class="student-info"><span class="student-info-title">Student:</span> Katie Landry</p>
             <p class="student-info"><span class="student-info-title">Category:</span> Drawing</p>
-            <p class="student-info"><span class="student-info-title">Level:</span> Junior</p>
+            <p class="student-info"><span class="student-info-title">Level:</span> Sophomore</p>
           </div>
         </div>
       </div>
