removed lazy load

--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js" type="text/javascript"></script>
   <script src="scripts/jquery.fancybox.min.js" type="text/javascript"></script>
   <script src="scripts/jquery.waypoints.min.js" type="text/javascript"></script>
-  <script src="scripts/jquery.lazy.min.js" type="text/javascript"></script>
   <script src="scripts/sticky.min.js" type="text/javascript"></script>
   <script src="scripts/site.js?v=2.0"></script>
 
@@ -127,7 +126,7 @@
       <h2 class="offset-by-one column">Best in Show<br/><span class="award-category">Fine Art</span></h2>
       <div class="row">
         <a href="images/project-images/SarahDelano_main.jpg" data-fancybox="group best in show 1">
-          <img class="offset-by-one seven columns u-full-width lazy" data-src="images/project-images/SarahDelano_main.jpg" alt="Sriracha" />
+          <img class="offset-by-one seven columns u-full-width" src="images/project-images/SarahDelano_main.jpg" alt="Sriracha" />
         </a>
         <a href="images/project-images/SarahDelano_2.jpg" data-fancybox="group best in show 1">
           <img class="gallery-image" src="images/project-images/SarahDelano_2.jpg" alt="Sriracha" />
@@ -157,7 +156,7 @@
       <h2 class="offset-by-one column">Best in Show<br/><span class="award-category">Graphic Design</span></h2>
       <div class="row">
         <a href="images/project-images/MeganAdams_Main.jpg" data-fancybox="group best in show 2">
-          <img class="offset-by-one seven columns u-full-width lazy" src="images/project-images/MeganAdams_Main.jpg" alt="Casale Pasta" />
+          <img class="offset-by-one seven columns u-full-width" src="images/project-images/MeganAdams_Main.jpg" alt="Casale Pasta" />
         </a>
         <a href="images/project-images/MeganAdams_3.jpg" data-fancybox="group best in show 2">
           <img class="gallery-image" src="images/project-images/MeganAdams_3.jpg" alt="Casale Pasta" />
@@ -255,7 +254,7 @@
       <div class="row row-spacing">
         <div class="offset-by-one five columns">
           <a href="images/project-images/wave_main.jpg" data-fancybox="group judges choice 3">
-            <img class="offset-by-one u-full-width lazy" data-src="images/project-images/wave_main.jpg" alt="Wave Band" />
+            <img class="offset-by-one u-full-width" src="images/project-images/wave_main.jpg" alt="Wave Band" />
           </a>
           <a href="images/project-images/wave_2.jpg" data-fancybox="group judges choice 3">
             <img class="gallery-image" src="images/project-images/wave_2.jpg" alt="Wave Band" />
@@ -371,7 +370,7 @@
             <img class="offset-by-one u-full-width" src="images/project-images/CharlieClasse_Main.jpg" alt="FI$H" />
           </a>
           <a href="images/project-images/CharlieClasse_2.jpg" data-fancybox="group judges choice 6">
-            <img class="gallery-image" src="images/project-images/CharlieClasse_2..jpg" alt="FI$H" />
+            <img class="gallery-image" src="images/project-images/CharlieClasse_2.jpg" alt="FI$H" />
           </a>
           <div class="project-text">
             <h3 class="project-title">FI$H</h3>
@@ -1442,11 +1441,6 @@
       </div>
     </div>
   </footer>
-  <script>
-  $(function() {
-         $('.lazy').Lazy();
-     });
-     </script>
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
