--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           <hr>
           <p class="student-info"><span class="student-info-title">Student:</span> Sarah Delano</p>
           <p class="student-info"><span class="student-info-title">Category:</span> Painting</p>
-          <p class="student-info"><span class="student-info-title">Level:</span> Senior</p>
+          <p class="student-info"><span class="student-info-title">Level:</span> Junior</p>
         </div>
       </div>
     </article>
@@ -376,7 +376,7 @@
             <h3 class="project-title">FI$H</h3>
             <hr>
             <p class="student-info"><span class="student-info-title">Student:</span> Charlie Classe</p>
-            <p class="student-info"><span class="student-info-title">Hometown:</span> Foundations</p>
+            <p class="student-info"><span class="student-info-title">Category:</span> Foundations</p>
             <p class="student-info"><span class="student-info-title">Level:</span> Sophomore</p>
           </div>
         </div>
